--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "UIMD_PB_IA_BETA",
+  "name": "UIMD_PB_IA",
   "version": "2.0.0",
   "author": "asdfast <asdfast@uimd.kr>",
   "description": "uimd pb ia beta",
